# nexus-ai-trading

./: .env.example  .gitignore  Dockerfile  Dockerfile.dashboard  Dockerfile.paper  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.paper.yml  docker-compose.yml  next.config.js  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-paper.txt  tailwind.config.js  test_classes.py  test_provider.py  test_provider2.py  tsconfig.tsbuildinfo
.github/workflows/: deploy.yml  lint.yml
app/: globals.css  layout.tsx  page.tsx
app/agents/: page.tsx
app/alerts/: page.tsx
app/backtest/: page.tsx
app/commodities/: page.tsx
app/crypto/: page.tsx
app/forex/: page.tsx
app/indian-stocks/: page.tsx
app/journal/: page.tsx
app/performance/: page.tsx
app/polymarket/: page.tsx
app/risk/: page.tsx
app/scanner/: page.tsx
app/settings/: page.tsx
app/us-stocks/: page.tsx
components/: AgentNetwork.tsx  LivePriceTicker.tsx  MarketStatusBadge.tsx  Navbar.tsx  PnLCalendar.tsx  PnLCard.tsx  RiskHeatmap.tsx  SignalFeed.tsx  TradeTable.tsx
components/charts/: CandlestickChart.tsx  VolumeChart.tsx
config/: feature_flags.yaml  settings.py
config/agents/: bear_researcher.yaml  bull_researcher.yaml  fundamental_analyst.yaml  portfolio_manager.yaml  risk_manager.yaml  sentiment_analyst.yaml  technical_analyst.yaml
config/markets/: commodities.yaml  crypto.yaml  forex.yaml  indian_stocks.yaml  us_stocks.yaml
config/risk/: circuit_breakers.yaml  correlations.yaml  limits.yaml
deploy/: runbook.md  security_hardening.sh  vps_deploy.sh
deploy/hostinger/: monitoring.sh  nexus-api.service  nexus-bot.service  nexus-data.service  setup.sh
deploy/systemd/: nexus-alpha.service
deploy/vercel/: vercel.json
docs/: agents.md  api.md  architecture.md  risk.md  strategies.md  troubleshooting.md
hooks/: useBotMetrics.ts  useLivePrices.ts  useRealtimeData.ts
lib/: api.ts  store.ts  supabase.ts  types.ts  utils.ts
monitoring/: prometheus.yml
monitoring/alertmanager/: config.yml
monitoring/rules/: trading_alerts.yml
scripts/: health_check.py  run_backtest.py  run_dream_mode.py  run_live.py  run_paper.py  seed_historical.py  setup_supabase.sql  train_swarm_voter.py
src/: main.py
src/agents/: __init__.py  agent_registry.py  base_agent.py  bear_researcher.py  bull_researcher.py  coordinator.py  debate_engine.py  fundamental_analyst.py  portfolio_manager.py  risk_manager.py  sentiment_analyst.py  technical_analyst.py
src/alerts/: manager.py
src/analysis/: __init__.py  advanced_indicators.py  fibonacci.py  indicators.py  market_regime.py  multi_timeframe.py  pattern_recognition.py  support_resistance.py  volume_profile.py
src/api/: schemas.py  server.py  websocket_manager.py
src/backtesting/: data_loader.py  engine.py  optimizer.py  report_generator.py
src/config/: settings.py
src/data/: base.py  candle_store.py  market_orchestrator.py  normalizer.py  validator.py  websockets.py
src/db/: models.py  query_loader.py  supabase_client.py
src/execution/: __init__.py  alpaca_executor.py  base_executor.py  binance_executor.py  emergency_shutdown.py  engine.py  ibkr_executor.py  kite_executor.py  live.py  oanda_executor.py  paper.py  paper_trader.py  slippage_model.py  smart_router.py
src/indicators/: engine.py
src/learning/: auto_calibrator.py  dream_mode.py  pattern_matcher.py  regime_adapter.py  rl_trainer.py  strategy_evolver.py  swarm_voter.py
src/llm/: __init__.py  base_llm.py  brier_tracker.py  claude_client.py  ensemble.py  ollama_client.py  openai_client.py  prompt_templates.py  qwen_client.py
src/monitoring/: alertmanager.py  health_check.py  health_server.py  prometheus_metrics.py  telegram_alerts.py
src/risk/: __init__.py  black_swan.py  circuit_breakers.py  correlation_monitor.py  drawdown_tracker.py  five_layer_risk.py  manager.py  position_sizer.py  regime_risk.py  stop_loss.py  take_profit.py
src/signals/: __init__.py  conflict_resolver.py  edge_filter.py  fusion_engine.py  llm_signals.py  onchain_signals.py  sentiment_signals.py  signal_types.py  technical_signals.py
src/strategies/: base_strategy.py  edge_filter.py  regime.py  registry.py  signal_fusion.py
src/utils/: alerts.py  logging.py  math_utils.py  rate_limiter.py  retry.py  timezone.py
tests/: conftest.py
tests/integration/: test_binance_ws.py  (+2 more)
(+84 files in other folders)
